--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="stylesheet" href="main.css">
 		%sveltekit.head%
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 	</head>
 
 	<style>
